@startuml

title __NAVBAR's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.navbar {
        class com.unidates.Unidates.UniDates.View.navbar.CardNotifica {
            ~ notification : Notification
            + CardNotifica()
            + MatchEmail()
            + createNotificaAmmonimento()
            + createNotificaMatch()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.navbar {
        class com.unidates.Unidates.UniDates.View.navbar.Navbar {
            - viewTitle : H1
            + Navbar()
            + create()
            - SearchFilter()
            - createHeaderContent()
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.View.navbar.CardNotifica -up-|> com.vaadin.flow.component.html.Div
  com.unidates.Unidates.UniDates.View.navbar.CardNotifica o-- com.unidates.Unidates.UniDates.DTOs.FotoDTO : foto
  com.unidates.Unidates.UniDates.View.navbar.CardNotifica o-- com.unidates.Unidates.UniDates.DTOs.NotificaDTO : notifica
  com.unidates.Unidates.UniDates.View.navbar.CardNotifica o-- com.unidates.Unidates.UniDates.DTOs.ProfiloDTO : profilo
  com.unidates.Unidates.UniDates.View.navbar.CardNotifica o-- com.unidates.Unidates.UniDates.Control.ModifyProfileControl : profiloController
  com.unidates.Unidates.UniDates.View.navbar.CardNotifica o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.navbar.Navbar -up-|> com.vaadin.flow.component.applayout.AppLayout
  com.unidates.Unidates.UniDates.View.navbar.Navbar o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.navbar.Navbar o-- com.unidates.Unidates.UniDates.Control.ModifyProfileControl : profiloController
  com.unidates.Unidates.UniDates.View.navbar.Navbar o-- com.unidates.Unidates.UniDates.DTOs.StudenteDTO : studente
  com.unidates.Unidates.UniDates.View.navbar.Navbar o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
